--- a/example-setups/todos/package.json
+++ b/example-setups/todos/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.13",
     "@kaushik_varanasi/react-apollo": "^2.0.0",
-    "@kaushik_varanasi/rocketsgraphql-js-sdk": "^1.4.0",
+    "@kaushik_varanasi/rocketsgraphql-js-sdk": "^1.3.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -41,5 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "cypress": "^9.1.1"
+  }
 }
